style: new game header

--- a/game.html
+++ b/game.html
@@ -51,29 +51,29 @@
     <div id="game-display">
         <header>
             <div class="container-fluid">
-                <div class="row">
+                <div class="row text-center">
                     <div class="col-12 col-md-6">
                         <div class="row">
-                            <div class="col-2">
+                            <div class="col-2 border-end border-danger border-1">
                                 <img class="img-fluid header-logo pe-2" src="assets/images/arsenal-header-logo.webp"
                                 alt="Arsenal football team logo" id="arsenal-logo">
                             </div>
                             <div class="col-8">
                                 <div class="row">
-                                    <div class="col-2">Played</div>
-                                    <div class="col-2">Won</div>
-                                    <div class="col-2">Drawn</div>
-                                    <div class="col-2">Lost</div>
-                                    <div class="col-2">Goals</div>
-                                    <div class="col-2">Points</div>
+                                    <div class="col-2 border-end border-danger border-1">Played</div>
+                                    <div class="col-2 border-end border-danger border-1">Won</div>
+                                    <div class="col-2 border-end border-danger border-1">Drawn</div>
+                                    <div class="col-2 border-end border-danger border-1">Lost</div>
+                                    <div class="col-2 border-end border-danger border-1">Goals</div>
+                                    <div class="col-2 border-end border-danger border-1">Points</div>
                                 </div>
                                 <div class="row">
-                                    <div class="col-2">0</div>
-                                    <div class="col-2">0</div>
-                                    <div class="col-2">0</div>
-                                    <div class="col-2">0</div>
-                                    <div class="col-2">0</div>
-                                    <div class="col-2">0</div>
+                                    <div class="col-2 border-end border-danger border-1">0</div>
+                                    <div class="col-2 border-end border-danger border-1">0</div>
+                                    <div class="col-2 border-end border-danger border-1">0</div>
+                                    <div class="col-2 border-end border-danger border-1">0</div>
+                                    <div class="col-2 border-end border-danger border-1">0</div>
+                                    <div class="col-2 border-end border-danger border-1">0</div>
                                 </div>
                             </div>
                             
@@ -84,96 +84,47 @@
                         </div>
                     </div>
                     <div class="col-12 col-md-6">
-                        <div class="row">
+                        <div class="row border-start border-danger border-1">
                             <div class="col-9">
-                                <div class="row">
-                                    <div class="col-4">Match 1</div>
-                                    <div class="col-4">Match 2</div>
+                                <div class="row border-bottom border-danger border-1">
+                                    <div class="col-4 border-end border-danger border-3">Match 1</div>
+                                    <div class="col-4 border-end border-danger border-3">Match 2</div>
                                     <div class="col-4"> Match 3</div>
                                 </div>
                                 <div class="row">
-                                    <div class="col-4">
+                                    <div class="col-4 border-end border-danger border-3">
                                         <div class="row">
                                             <div class="col-3">1</div>
-                                            <div class="col-3">2</div>
-                                            <div class="col-3">3</div>
-                                            <div class="col-3">4</div>
+                                            <div class="col-3 border-start border-danger border-1">2</div>
+                                            <div class="col-3 border-start border-danger border-1">3</div>
+                                            <div class="col-3 border-start border-danger border-1">4</div>
+                                        </div>
+                                    </div>
+                                    <div class="col-4 border-end border-danger border-3">
+                                        <div class="row">
+                                            <div class="col-3">1</div>
+                                            <div class="col-3 border-start border-danger border-1">2</div>
+                                            <div class="col-3 border-start border-danger border-1">3</div>
+                                            <div class="col-3 border-start border-danger border-1">4</div>
                                         </div>
                                     </div>
                                     <div class="col-4">
                                         <div class="row">
                                             <div class="col-3">1</div>
-                                            <div class="col-3">2</div>
-                                            <div class="col-3">3</div>
-                                            <div class="col-3">4</div>
-                                        </div>
-                                    </div>
-                                    <div class="col-4">
-                                        <div class="row">
-                                            <div class="col-3">1</div>
-                                            <div class="col-3">2</div>
-                                            <div class="col-3">3</div>
-                                            <div class="col-3">4</div>
+                                            <div class="col-3 border-start border-danger border-1">2</div>
+                                            <div class="col-3 border-start border-danger border-1">3</div>
+                                            <div class="col-3 border-start border-danger border-1">4</div>
                                         </div>
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-3">
+                            <div class="col-3 border-start border-danger border-3">
                                 <h6 class="d-inline align-middle pe-2">Derby Duel</h6>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
-
-            <!--
-            <nav class="navbar">
-                <div class="container-fluid">
-                    
-                    <div class="col-10 col-md-11 text-center">
-                        <img class="img-fluid header-logo pe-2" src="assets/images/arsenal-header-logo.webp"
-                            alt="Arsenal football team logo" id="arsenal-logo">
-                        <h1 class="d-inline align-middle pe-2">Derby Duel</h1>
-                        <img class="img-fluid header-logo" src="assets/images/spurs-header-logo.webp"
-                            alt="Tottenham Hotspurs team logo" id="spurs-logo">
-                    </div>
-                    <div class="col-2 col-md-1 text-end">
-                        <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas"
-                            data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
-                            <span class="navbar-toggler-icon"></span>
-                        </button>
-                        <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar"
-                            aria-labelledby="offcanvasNavbarLabel">
-                            <div class="offcanvas-header">
-                                <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Menu</h5>
-                                <button type="button" class="btn-close" data-bs-dismiss="offcanvas"
-                                    aria-label="Close"></button>
-                            </div>
-                            <div class="offcanvas-body">
-                                <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
-                                    <li class="nav-item">
-                                        <a class="nav-link active" aria-current="page" href="#">Home</a>
-                                    </li>
-                                    <li class="nav-item">
-                                        <a class="nav-link" href="#">About</a>
-                                    </li>
-                                    <li class="nav-item">
-                                        <a class="nav-link" href="#">Features</a>
-                                    </li>
-                                    <li class="nav-item">
-                                        <a class="nav-link" href="#">How to Play</a>
-                                    </li>
-                                    <li class="nav-item">
-                                        <a class="nav-link" href="#">Contact</a>
-                                    </li>
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </nav>
-            -->
-
         </header>
         <div class="container-fluid quiz-section">
             <div class="row game-area">
