--- a/game.html
+++ b/game.html
@@ -12,6 +12,7 @@
     <!-- Main Stylesheet -->
     <link href="assets/css/styles.css" rel="stylesheet">
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <script src="https://kit.fontawesome.com/2d6908b6f2.js" crossorigin="anonymous"></script>
 
 </head>
 
@@ -94,7 +95,9 @@
                                 <div class="row">
                                     <div class="col-4 border-end border-danger border-3">
                                         <div class="row">
-                                            <div class="col-3">1</div>
+                                            <div class="col-3">
+                                                <i class="fa-solid fa-futbol"></i>
+                                            </div>
                                             <div class="col-3 border-start border-danger border-1">2</div>
                                             <div class="col-3 border-start border-danger border-1">3</div>
                                             <div class="col-3 border-start border-danger border-1">4</div>
