fix: modal classes changed to id's for use in game.js

--- a/game.html
+++ b/game.html
@@ -56,13 +56,13 @@
                 </div>
                 <div class="modal-body">
                     <div class="row">
-                        <div class="col-6">
-                            <img class="img-fluid header-logo pe-2" src="assets/images/arsenal-logo.webp"
-                                alt="Arsenal football team logo" id="arsenal-logo">
+                        <div class="col-6 team-selector" id="modal-arsenal-logo">
+                            <img class="img-fluid" src="assets/images/arsenal-logo.webp"
+                                alt="Arsenal football team logo" id="modal-arsenal-image">
                         </div>
-                        <div class="col-6">
-                            <img class="img-fluid header-logo" src="assets/images/spurs-logo.webp"
-                                alt="Tottenham Hotspurs team logo" id="spurs-logo">
+                        <div class="col-6 team-selector" id="modal-spurs-logo">
+                            <img class="img-fluid" src="assets/images/spurs-logo.webp"
+                                alt="Tottenham Hotspurs team logo" id="modal-spurs-image">
                         </div>
                     </div>
                 </div>
