fix: div's changed to buttons to start the game

--- a/game.html
+++ b/game.html
@@ -57,19 +57,23 @@
                 <div class="modal-body">
                     <div class="row">
                         <div class="col-6 team-selector" id="modal-arsenal-logo">
-                            <img class="img-fluid" src="assets/images/arsenal-logo.webp"
+                        <span class="d-inline-block" tabindex="0" data-bs-toggle="tooltip" data-bs-title="Disabled tooltip">
+                            <button type="button" class="btn" id="start-quiz" data-bs-dismiss="modal">
+                                <img class="img-fluid" src="assets/images/arsenal-logo.webp"
                                 alt="Arsenal football team logo" id="modal-arsenal-image">
-                        </div>
-                        <div class="col-6 team-selector" id="modal-spurs-logo">
-                            <img class="img-fluid" src="assets/images/spurs-logo.webp"
-                                alt="Tottenham Hotspurs team logo" id="modal-spurs-image">
-                        </div>
+                            </button>
+                        </span>
                     </div>
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-primary" id="start-quiz" data-bs-dismiss="modal">Start
-                        Quiz</button>
-                </div>
+                    <div class="col-6 team-selector" id="modal-spurs-logo">
+                        <span class="d-inline-block" tabindex="0" data-bs-toggle="tooltip" data-bs-title="Disabled tooltip">
+                            <button type="button" class="btn" id="start-quiz" data-bs-dismiss="modal">
+                                <img class="img-fluid" src="assets/images/spurs-logo.webp"
+                                alt="Tottenham Hotspurs team logo" id="modal-spurs-image">
+                            </button>
+                        </span>
+                    </div>
+                    </div>
+                </div> 
             </div>
         </div>
     </div>
