update: location of question counter changed and progress bar removed

--- a/game.html
+++ b/game.html
@@ -164,13 +164,8 @@
                 <div class="col-12 col-md-6 border border-danger border-1 position-relative p-0">
                     <div class="col-12">
                         <section class="question-section">
-                            <div id="progress-bar">
-                                <div class="bg-color-2" id="progress-bar-indicator">
-                                    <h3 class="ms-1 mb-0"><span id="question-counter">1</span>/10</h3>
-                                </div>
-                            </div>
                             <h3 class="m-1">Score: <span id="score">0</span></h3>
-                            <h2 class="text-end me-5">Q1</h2>
+                            <h2 class="text-end me-5">Q<span id="question-counter">1</span></h2>
                             <p class="position-absolute m-5" id="question-paragraph">On Sol Campbell's first return to
                                 White Hart
                                 Lane after joining Arsenal, Spurs fans filled the stadium with balloons that had which
