update: location of score changed to goals in game.html

--- a/game.html
+++ b/game.html
@@ -102,7 +102,7 @@
                                     <div class="col-2 border-end border-danger border-1">0</div>
                                     <div class="col-2 border-end border-danger border-1">0</div>
                                     <div class="col-2 border-end border-danger border-1">0</div>
-                                    <div class="col-2 border-end border-danger border-1">0</div>
+                                    <div class="col-2 border-end border-danger border-1" id="score">0</div>
                                     <div class="col-2 border-end border-danger border-1">0</div>
                                 </div>
                             </div>
@@ -164,7 +164,6 @@
                 <div class="col-12 col-md-6 border border-danger border-1 position-relative p-0">
                     <div class="col-12">
                         <section class="question-section">
-                            <h3 class="m-1">Score: <span id="score">0</span></h3>
                             <h2 class="text-end me-5">Q<span id="question-counter">1</span></h2>
                             <p class="position-absolute m-5" id="question-paragraph">On Sol Campbell's first return to
                                 White Hart
