add: get match-one child elements from game.html

--- a/game.html
+++ b/game.html
@@ -123,7 +123,7 @@
                                 </div>
                                 <div class="row">
                                     <div class="col-4 border-end border-danger border-3">
-                                        <div class="row">
+                                        <div class="row" id="match-one">
                                             <div class="col-3">
                                                 <i class="fa-solid fa-futbol"></i>
                                             </div>
