add: functionality to display football for each question displayed

--- a/game.html
+++ b/game.html
@@ -124,28 +124,28 @@
                                 <div class="row">
                                     <div class="col-4 border-end border-danger border-3">
                                         <div class="row" id="match-one">
-                                            <div class="col-3">
-                                                <i class="fa-solid fa-futbol"></i>
+                                            <div class="col-3 question-indicator" data-game="0">
+                                                1
                                             </div>
-                                            <div class="col-3 border-start border-danger border-1">2</div>
-                                            <div class="col-3 border-start border-danger border-1">3</div>
-                                            <div class="col-3 border-start border-danger border-1">4</div>
+                                            <div class="col-3 border-start border-danger border-1 question-indicator" data-game="1">2</div>
+                                            <div class="col-3 border-start border-danger border-1 question-indicator" data-game="2">3</div>
+                                            <div class="col-3 border-start border-danger border-1 question-indicator" data-game="3">4</div>
                                         </div>
                                     </div>
                                     <div class="col-4 border-end border-danger border-3">
                                         <div class="row">
-                                            <div class="col-3">1</div>
-                                            <div class="col-3 border-start border-danger border-1">2</div>
-                                            <div class="col-3 border-start border-danger border-1">3</div>
-                                            <div class="col-3 border-start border-danger border-1">4</div>
+                                            <div class="col-3 question-indicator" data-game="4">1</div>
+                                            <div class="col-3 border-start border-danger border-1 question-indicator" data-game="5">2</div>
+                                            <div class="col-3 border-start border-danger border-1 question-indicator" data-game="6">3</div>
+                                            <div class="col-3 border-start border-danger border-1 question-indicator" data-game="7">4</div>
                                         </div>
                                     </div>
                                     <div class="col-4">
                                         <div class="row">
-                                            <div class="col-3">1</div>
-                                            <div class="col-3 border-start border-danger border-1">2</div>
-                                            <div class="col-3 border-start border-danger border-1">3</div>
-                                            <div class="col-3 border-start border-danger border-1">4</div>
+                                            <div class="col-3 question-indicator" data-game="8">1</div>
+                                            <div class="col-3 border-start border-danger border-1 question-indicator" data-game="9">2</div>
+                                            <div class="col-3 border-start border-danger border-1 question-indicator" data-game="10">3</div>
+                                            <div class="col-3 border-start border-danger border-1 question-indicator" data-game="11">4</div>
                                         </div>
                                     </div>
                                 </div>
