add: goal points added to total points

--- a/game.html
+++ b/game.html
@@ -103,7 +103,7 @@
                                     <div class="col-2 border-end border-danger border-1">0</div>
                                     <div class="col-2 border-end border-danger border-1">0</div>
                                     <div class="col-2 border-end border-danger border-1" id="score">0</div>
-                                    <div class="col-2 border-end border-danger border-1">0</div>
+                                    <div class="col-2 border-end border-danger border-1" id="points">0</div>
                                 </div>
                             </div>
                             
