--- a/game.html
+++ b/game.html
@@ -98,7 +98,7 @@
                                     <div class="col-2 border-end border-danger border-1">Points</div>
                                 </div>
                                 <div class="row">
-                                    <div class="col-2 border-end border-danger border-1">0</div>
+                                    <div class="col-2 border-end border-danger border-1" id="played">0</div>
                                     <div class="col-2 border-end border-danger border-1">0</div>
                                     <div class="col-2 border-end border-danger border-1">0</div>
                                     <div class="col-2 border-end border-danger border-1">0</div>
