add: bootstrap toast to display each match result

--- a/game.html
+++ b/game.html
@@ -78,6 +78,19 @@
         </div>
     </div>
 
+    <div class="toast-container position-fixed top-50 start-50 translate-middle p-3">
+        <div id="matchToast" class="toast vh-100 vw-100" role="alert" aria-live="assertive" aria-atomic="true">
+          <div class="toast-header">
+            <strong class="me-auto">Bootstrap</strong>
+            <small>11 mins ago</small>
+            <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
+          </div>
+          <div class="toast-body">
+            Hello, world! This is a toast message.
+          </div>
+        </div>
+      </div>
+
     <div id="game-display">
         <header>
             <div class="container-fluid">
