add: counter functionality to won, drawn, lost displays

--- a/game.html
+++ b/game.html
@@ -112,9 +112,9 @@
                                 </div>
                                 <div class="row">
                                     <div class="col-2 border-end border-danger border-1" id="played">0</div>
-                                    <div class="col-2 border-end border-danger border-1">0</div>
-                                    <div class="col-2 border-end border-danger border-1">0</div>
-                                    <div class="col-2 border-end border-danger border-1">0</div>
+                                    <div class="col-2 border-end border-danger border-1" id="won">0</div>
+                                    <div class="col-2 border-end border-danger border-1" id="drawn">0</div>
+                                    <div class="col-2 border-end border-danger border-1" id="lost">0</div>
                                     <div class="col-2 border-end border-danger border-1" id="score">0</div>
                                     <div class="col-2 border-end border-danger border-1" id="points">0</div>
                                 </div>
