add: functionality to change quote depending on match result

--- a/game.html
+++ b/game.html
@@ -79,13 +79,13 @@
     </div>
 
     <div class="toast-container position-fixed top-50 start-50 translate-middle p-3">
-        <div id="matchToast" class="toast vh-100 vw-100" data-bs-autohide="false" role="alert" aria-live="assertive" aria-atomic="true">
+        <div id="match-toast" class="toast vh-100 vw-100" data-bs-autohide="false" role="alert" aria-live="assertive" aria-atomic="true">
           <div class="toast-header">
             <strong class="me-auto text-center">Match <span id="toast-header-match">2</span></strong>
             <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
           </div>
           <div class="toast-body text-center">
-            <span id="quotes">Take a bow, son!</span>
+            <span id="match-quote">Take a bow, son!</span>
             <p>You <span id="toast-body-result">won/lost</span> match <span id="toast-body-match">2</span></p>
           </div>
         </div>
