--- a/end.html
+++ b/end.html
@@ -11,6 +11,10 @@
         integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <!-- Main Stylesheet -->
     <link href="assets/css/styles.css" rel="stylesheet">
+    <!-- Canvas-Confetti - Celebration Confetti Libary -->
+    <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.5.1/dist/confetti.browser.min.js"></script>
+    <!-- js-confetti - Toilet Roll Confetti Library -->
+    <script src="https://cdn.jsdelivr.net/npm/js-confetti@latest/dist/js-confetti.browser.js"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://kit.fontawesome.com/2d6908b6f2.js" crossorigin="anonymous"></script>
 
@@ -110,9 +114,9 @@
 
                 <div class="col-12 col-md-6 p-0 border border-danger border-1 d-flex align-items-center bg-color-2 txt-color-2 text-center">
                     <div class="col-12" id="right-side-results">
-                        <h3 class="">Oops!</h3>
+                        <h3 id="result-exclamation">Oops!</h3>
                         <p>You scored <span id="end-points">12</span> points</p>
-                        <p>You have been relagated to league one</p>
+                        <p id="result-paragraph">You have been relagated to league one</p>
                         <a href="game.html">
                             <button type="button" class="btn btn-primary txt-color-2">
                                 Re-take Quiz
