--- a/end.html
+++ b/end.html
@@ -42,12 +42,12 @@
                                     <div class="col-2 border-end border-danger border-1">Points</div>
                                 </div>
                                 <div class="row">
-                                    <div class="col-2 border-end border-danger border-1" id="played">0</div>
-                                    <div class="col-2 border-end border-danger border-1" id="won">0</div>
-                                    <div class="col-2 border-end border-danger border-1" id="drawn">0</div>
-                                    <div class="col-2 border-end border-danger border-1" id="lost">0</div>
-                                    <div class="col-2 border-end border-danger border-1" id="score">0</div>
-                                    <div class="col-2 border-end border-danger border-1" id="points">0</div>
+                                    <div class="col-2 border-end border-danger border-1" id="total-played">0</div>
+                                    <div class="col-2 border-end border-danger border-1" id="total-won">0</div>
+                                    <div class="col-2 border-end border-danger border-1" id="total-drawn">0</div>
+                                    <div class="col-2 border-end border-danger border-1" id="total-lost">0</div>
+                                    <div class="col-2 border-end border-danger border-1" id="total-score">0</div>
+                                    <div class="col-2 border-end border-danger border-1" id="total-points">0</div>
                                 </div>
                             </div>
                             
@@ -68,9 +68,7 @@
                                 <div class="row">
                                     <div class="col-4 border-end border-danger border-3">
                                         <div class="row" id="match-one">
-                                            <div class="col-3 question-indicator" data-game="0">
-                                                1
-                                            </div>
+                                            <div class="col-3 question-indicator" data-game="0">1</div>
                                             <div class="col-3 border-start border-danger border-1 question-indicator" data-game="1">2</div>
                                             <div class="col-3 border-start border-danger border-1 question-indicator" data-game="2">3</div>
                                             <div class="col-3 border-start border-danger border-1 question-indicator" data-game="3">4</div>
