--- a/game.html
+++ b/game.html
@@ -177,12 +177,8 @@
                 <div class="col-12 col-md-6 border border-danger border-1 position-relative p-0">
                     <div class="col-12">
                         <section class="question-section">
-                            <h2 class="text-end me-5">Q<span id="question-counter">1</span></h2>
-                            <p class="position-absolute m-5" id="question-paragraph">On Sol Campbell's first return to
-                                White Hart
-                                Lane after joining Arsenal, Spurs fans filled the stadium with balloons that had which
-                                word
-                                written on them?</p>
+                            <h2 class="text-end me-5 question-number">Q<span id="question-counter">0</span></h2>
+                            <p class="position-absolute m-5" id="question-paragraph"></p>
                         </section>
                     </div>
                 </div>
